<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <ScrollView
        android:id="@+id/registrationScrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/calculation_recipe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/calculation_recipe_name"
                android:textColorHighlight="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/recipe_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1">

                </android.support.v7.widget.AppCompatSpinner>

                <!-- Raw amount -->
                <EditText
                    android:id="@+id/recipe_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/material_amount_dots"
                    android:inputType="numberDecimal"
                    android:textColor="@android:color/black"
                    android:textColorHighlight="@android:color/darker_gray"
                    android:textColorHint="@android:color/darker_gray" />

                <!-- Percentage sign -->
                <TextView
                    android:id="@+id/percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/amount_sign"
                    android:textColorHighlight="@android:color/darker_gray"
                    android:textColorHint="@android:color/darker_gray" />

            </LinearLayout>

            <Button
                android:id="@+id/make_calculation_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="15dp"
                android:text="@string/calculation_make" />

            <ListView
                android:id="@+id/listViewRecipes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>





