<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/recipe_creation_scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Recipe name -->
            <android.support.design.widget.TextInputLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/recipe_name_layout">
                <EditText
                    android:id="@+id/recipe_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:hint="@string/recipe_name"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>
            <!-- Recipe components; element (layout) should be added when
            button "add_new_material_button" is pressed -->
            <LinearLayout
                android:id="@+id/material_addition_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">
                <Spinner
                    android:id="@+id/material_selection_spinner"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" />
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/material_amount_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <EditText
                        android:id="@+id/material_amount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/material_amount"
                        android:inputType="numberDecimal"
                        android:padding="5dp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/add_new_material_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/material_addition" />
            <!-- The % could be added to the text or the field could be
             thinner; not match parent-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/shrinkage_coefficient"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <EditText
                        android:id="@+id/shrinkage_coefficient_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/shrinkage_coefficient_name"
                        android:inputType="numberDecimal"
                        android:padding="5dp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>
    <!-- Submit button -->
    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonstyle"
        android:textColor="@color/white"
        android:text="@string/create_user"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/submitRecipeButton" />
</RelativeLayout>